--- a/src/assets/less/components/checkbox-radio.scss
+++ b/src/assets/less/components/checkbox-radio.scss
@@ -86,7 +86,7 @@
             width: 32px;
             height: 16px;
             border-radius: 12px;
-            background: $font-color-light;
+            background: $border-color-less;
             -webkit-box-shadow: 0 0 2px 2px rgba(112, 115, 148, 0.4);
             -moz-box-shadow: 0 0 2px 2px rgba(112, 115, 148, 0.4);
             box-shadow: 0 0 2px 2px rgba(112, 115, 148, 0.4);
