--- a/src/assets/less/components/menu.scss
+++ b/src/assets/less/components/menu.scss
@@ -1,9 +1,10 @@
-.vui-menu>ul {
+$menu-class: #{$prefix-cls}menu;
+#{$menu-class}>ul {
     border: 1px solid $border-color-less;
     border-bottom: none;
 }
 
-.vui-menu-items {
+#{$menu-class}-items {
     background: #fff;
     border-top: 1px solid $border-color-litle;
     p {
@@ -11,7 +12,7 @@
         box-sizing: border-box;
         transition: background ease-in-out 0.2s;
     }
-    .vui-menu-custom {
+    #{$menu-class}-custom {
         padding: 8px 10px;
     }
     a {
@@ -27,23 +28,23 @@
             background: $border-color-litle;
             color: #333;
         }
-        &.vui-actived>p {
+        &#{$menu-class}-actived>p {
             background: $light-color;
             color: #fff;
         }
     }
 }
 
-.menu-items-enter-active {
+#{$menu-class}-items-enter-active {
     transition: all .3s ease-in-out;
 }
 
-.menu-items-leave-active {
+#{$menu-class}-items-leave-active {
     transition: all .3s ease-in-out;
 }
 
-.menu-items-enter,
-.menu-items-leave-to {
+#{$menu-class}-items-enter,
+#{$menu-class}-items-leave-to {
     transform: translateX(5px);
     opacity: 0;
 }
