--- a/src/assets/less/vui.scss
+++ b/src/assets/less/vui.scss
@@ -10,3 +10,4 @@
 @import "./components/checkbox-radio";
 @import "./components/menu";
 @import "./components/date-picker";
+@import "./components/modal";
