--- a/src/assets/less/variable.scss
+++ b/src/assets/less/variable.scss
@@ -21,14 +21,16 @@ $border-radius: 3px;
 $border-radius-modal: 5px;
 $border-radius-button: 5px;
 //color
+$dark-color: #565FBF;
 // $primary-color: #734dff;
 $primary-color: #6772E5;
-$light-color: #6D78F2;
+// $light-color: #6D78F2;
+$light-color: #9CA3F6;
 $light-less-color: $primary-color;
-$dark-color: #565FBF;
 $border-color-main: #CCC;
 $border-color-less: #E6E6E6;
-$border-color-litle: #EDEDED;
+// $border-color-little: #EDEDED;
+$border-color-little: #F2F2F2;
 $bg-shade: rgba(0, 0, 0, 0.3);
 $bg-shade-30: rgba(0, 0, 0, 0.3);
 $bg-shade-60: rgba(0, 0, 0, 0.6);
@@ -36,4 +38,5 @@ $bg-shade-80: rgba(0, 0, 0, 0.8);
 $font-color-dark: #333;
 $font-color-main: #666;
 $font-color-light: #999;
+$font-color-little: #ccc;
 $font-color-link: #2d8cf0;
