--- a/src/assets/less/components/input.scss
+++ b/src/assets/less/components/input.scss
@@ -9,10 +9,10 @@
     margin: 2px 0;
     color: #666;
     &:disabled {
-        background: $border-color-litle;
+        background: $border-color-little;
         cursor: not-allowed;
     }
     &:read-only {
-        background: $border-color-litle;
+        background: $border-color-little;
     }
 }
