--- a/src/assets/less/vui.scss
+++ b/src/assets/less/vui.scss
@@ -8,6 +8,7 @@
 @import "./components/input";
 @import "./components/data-tips";
 @import "./components/checkbox-radio";
+@import "./components/icon";
 @import "./components/menu";
 @import "./components/date-picker";
 @import "./components/modal";
