--- a/src/assets/less/mixin.scss
+++ b/src/assets/less/mixin.scss
@@ -1,146 +1,6 @@
-//base
-
-/*
-* project style
-* m-表示模块
-* f-表示功能
-* u-表示UI
-*/
-
-.m-out {
-    width: 100%;
-    min-width: 1080px;
-}
-
-.m-in {
-    width: 1080px;
-    margin: 0 auto;
-}
-
-.f-clear {
-    zoom: 1;
-}
-
-.f-clear:before,
-.f-clear:after {
-    display: table;
-    content: "";
-}
-
-.f-clear:after {
-    clear: both;
-}
-
-.f-dib {
-    display: inline-block;
-    zoom: 1;
-    *display: inline;
-    -display: inline;
-}
-
-.f-dbk {
-    display: block;
-}
-
-.f-hide {
-    display: none;
-}
-
-.f-tal {
-    text-align: left;
-}
-
-.f-tac {
-    text-align: center;
-}
-
-.f-tar {
-    text-align: right;
-}
-
-.f-filter {
-    opacity: 0.5;
-    filter: alpha(opacity=50);
-    -moz-opacity: 0.5;
-    -khtml-opacity: 0.5;
-}
-
-.f-hdmx {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-}
-
-.f-float {
-    display: inline-block;
-    display: inline-block;
-    zoom: 1;
-    *display: inline;
-    -display: inline;
-    text-spacing: -3px;
-}
-
-.f-left {
-    float: left;
-}
-
-.f-right {
-    float: right;
-}
-
-
-/*修复margin-top被父元素‘继承’问题*/
-
-.f-topbdr {
-    border-top: 1px solid transparent;
-}
-
-.f-disselected {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-.box-shadow {
-    box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.3);
-    -moz-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.3);
-    /*firefox*/
-    -webkit-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.3);
-    /*webkit*/
-}
-
-.box-shadow-2 {
-    box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.2);
-    -moz-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.2);
-    /*firefox*/
-    -webkit-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.2);
-    /*webkit*/
-}
-
-.box-shadow-less {
-    box-shadow: -1px -1px 1px 1px rgba(173, 171, 171, 0.1);
-}
-
-#{$prefix-cls}icon {
-    vertical-align: top;
-    display: inline-block;
-    zoom: 1;
-    *display: inline;
-    -display: inline;
-}
-
+//mixin
 [v-cloak] {
     display: none;
-}
-
-//new
-#{$prefix-cls}left {
-    float: left;
-}
-
-#{$prefix-cls}right {
-    float: right;
 }
 
 #{$prefix-cls}clear {
@@ -157,34 +17,21 @@
     clear: both;
 }
 
-//ui
-#{$prefix-cls}dis-selected {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+//修复margin-top被父元素‘继承’问题
+#{$prefix-cls}f-topbdr {
+    border-top: 1px solid transparent;
 }
 
-#{$prefix-cls}dib {
-    display: inline-block;
-    zoom: 1;
-    *display: inline;
-    -display: inline;
+#{$prefix-cls}box-shadow-less {
+    box-shadow: -1px -1px 1px 1px rgba(173, 171, 171, 0.1);
 }
 
-#{$prefix-cls}dib-vt {
-    display: inline-block;
-    zoom: 1;
-    *display: inline;
-    -display: inline;
+#{$prefix-cls}icon {
     vertical-align: top;
-}
-
-#{$prefix-cls}can-selected {
-    -webkit-user-select: text;
-    -moz-user-select: text;
-    -ms-user-select: text;
-    user-select: text;
+    display: inline-block;
+    zoom: 1;
+    *display: inline;
+    -display: inline;
 }
 
 #{$prefix-cls}title {
@@ -192,22 +39,6 @@
     color: $font-color-dark;
     height: $title-height;
     line-height: $title-height;
-}
-
-#{$prefix-cls}box-shadow {
-    box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.3);
-    -moz-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.3);
-    /*firefox*/
-    -webkit-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.3);
-    /*webkit*/
-}
-
-#{$prefix-cls}box-shadow-2 {
-    box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.2);
-    -moz-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.2);
-    /*firefox*/
-    -webkit-box-shadow: 0px 1px 5px 0px rgba(9, 2, 4, 0.2);
-    /*webkit*/
 }
 
 //font 设置
