--- a/src/assets/less/rest.scss
+++ b/src/assets/less/rest.scss
@@ -48,7 +48,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
-    font: $font-family;
+    font: $font;
 }
 
 
