--- a/src/assets/less/variable.scss
+++ b/src/assets/less/variable.scss
@@ -4,7 +4,7 @@ $prefix-cls: '.vui-';
 // font
 $font-size-base: 12px;
 $font-size: 14px;
-$font: $font-size-base/1.5 "Helvetica Neue",
+$font: $font-size/1.5 "Helvetica Neue",
 Helvetica,
 "PingFang SC",
 "Hiragino Sans GB",
