--- a/src/assets/less/components/select.scss
+++ b/src/assets/less/components/select.scss
@@ -4,7 +4,8 @@ $item-height: 30px;
     display: inline-block;
     position: relative;
     vertical-align: top;
-    width: 300px;
+    width: 200px;
+    cursor: pointer;
     &-items {
         height: $item-height;
         line-height: $item-height;
@@ -19,6 +20,7 @@ $item-height: 30px;
         width: 100%;
         border-radius: $border-radius;
         border: 1px solid $border-color-less;
+        cursor: inherit;
         &:hover {
             @extend #{$prefix-cls}box-shadow-less;
             color: $font-color-dark;
@@ -42,13 +44,20 @@ $item-height: 30px;
         max-height: $item-height *10-1;
         padding: 2px 0;
         overflow-y: auto;
+        cursor: inherit;
         li {
             @extend #{$select-class}-items;
+            cursor: inherit;
             &:not(:last-child) {
                 border-bottom: 1px solid $border-color-less;
             }
         }
     }
+}
+
+#{$select-class}-disabled {
+    background: $border-color-little;
+    cursor: not-allowed;
 }
 
 #{$select-class}-group {
