--- a/src/assets/less/mixin.scss
+++ b/src/assets/less/mixin.scss
@@ -22,6 +22,10 @@
     border-top: 1px solid transparent;
 }
 
+#{$prefix-cls}box-shadow {
+    box-shadow: 0 0 2px 2px rgba(103, 114, 229, 0.15);
+}
+
 #{$prefix-cls}box-shadow-less {
     box-shadow: -1px -1px 1px 1px rgba(173, 171, 171, 0.1);
 }
