--- a/src/assets/less/components/range.scss
+++ b/src/assets/less/components/range.scss
@@ -6,6 +6,7 @@ $range-class: #{$prefix-cls}range;
     height: 6px;
     background: $border-color-little;
     border-radius: 6px;
+    cursor: pointer;
     label {
         position: absolute;
         display: inline-block;
@@ -14,7 +15,7 @@ $range-class: #{$prefix-cls}range;
         background: $primary-color;
         top: 0;
         border-radius: 6px;
-        cursor: pointer;
+        cursor: inherit;
         transition: all ease-in-out 0.2s;
     }
     span {
@@ -22,7 +23,7 @@ $range-class: #{$prefix-cls}range;
         top: -4px;
         display: inline-block;
         box-sizing: border-box;
-        cursor: pointer;
+        cursor: inherit;
         width: 14px;
         height: 14px;
         border-radius: 50%;
@@ -39,4 +40,8 @@ $range-class: #{$prefix-cls}range;
     &-end {
         right: -7px;
     }
+}
+
+#{$range-class}-disabled {
+    background: #f30;
 }
