--- a/src/assets/less/components/upload.scss
+++ b/src/assets/less/components/upload.scss
@@ -1,4 +1,14 @@
-$range-class: #{$prefix-cls}range;
+$range-class: #{$prefix-cls}upload;
 #{$range-class}-warp {
-    background: #f30;
+    position: relative;
+    input[type=file] {
+        // display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 0;
+        cursor: pointer;
+        width: 100%;
+        height: 100%;
+    }
 }
