增加文件预览，文件大小限制，格式限制功能

--- a/src/assets/less/components/button.scss
+++ b/src/assets/less/components/button.scss
@@ -8,6 +8,7 @@ $button-class: #{$prefix-cls}button;
     box-sizing: border-box;
     color: $font-color-main;
     margin: 2px 0;
+    transition: all ease-in-out 0.3s;
     &#{$button-class}-small {
         padding: 0 10px;
         height: 30px;
