--- a/src/assets/less/components/upload.scss
+++ b/src/assets/less/components/upload.scss
@@ -1,14 +1,9 @@
 $range-class: #{$prefix-cls}upload;
 #{$range-class}-warp {
+    display: inline-block;
+    box-sizing: border-box;
     position: relative;
     input[type=file] {
-        // display: none;
-        position: absolute;
-        top: 0;
-        left: 0;
-        opacity: 0;
-        cursor: pointer;
-        width: 100%;
-        height: 100%;
+        display: none;
     }
 }
